--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,14 @@ font-family: 'Open Sans', sans-serif;
 
 h1 {
     font-family: 'Playfair Display', serif;
-    font-size: 60px;
+    font-size: 80px;
     line-height: 70px;
 }
-
+.headingcss{
+ font-family: 'Playfair Display', serif;
+    font-size: 50px;
+    line-height: 50px;
+}
 h4 {
     font-family: 'Lato', sans-serif;
     text-transform: capitalize;
